--- a/PasswordSplitter/Pages/Index.razor
+++ b/PasswordSplitter/Pages/Index.razor
@@ -28,7 +28,7 @@
     </div>
     <div class="form-group">
         <label for="characters">Select number of characters:</label>
-        <select id="characters-select" class="form-control" @bind="@Characters">
+        <select id="characters-select" class="form-control" onchange="@SetCharacters">
             <option>1</option>
             <option>2</option>
             <option selected>3</option>
@@ -104,7 +104,7 @@
         }
 
         int value;
-        var isValid = int.TryParse(args.Value.ToString(), out value);
+        var isValid = int.TryParse(args?.Value?.ToString(), out value);
         if (!isValid)
         {
             HideIndexError = false;
@@ -150,5 +150,27 @@
         }
 
         return true;
+    }
+
+    async Task SetCharacters(ChangeEventArgs args)
+    {
+        int characters;
+        var isValidInt = int.TryParse(args?.Value?.ToString(), out characters);
+        if (!isValidInt)
+        {
+            return;
+        }
+
+        if (Indexes.Any())
+        {
+            var toRemove = Indexes.Where(x => x.Key > characters);
+            foreach (var item in toRemove)
+            {
+                Indexes.Remove(item.Key);
+            }
+        }
+
+        Characters = characters;
+        await InvokeAsync(StateHasChanged).ConfigureAwait(false);
     }
 }
